-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.11.1
-
None
-
8cb74f88f9a7680e6205e2cc3ed7407e02f49540 (qt-creator/qt-creator/master)
Given that I have overridden the clang-tidy executable to use clang-tidy 9, instead of the packaged clang-tidy 8.
I get this error when I start the analysis of the code.
qtcreator-4.11.1/libexec/qtcreator/clang/lib/clang/8.0.1/include/xmmintrin.h:1934:3: error: use of undeclared identifier '__builtin_ia32_storehps' [clang-diagnostic-error]
__builtin_ia32_storehps((__v2si *)__p, (__v4sf)__a);
Also happens with all Objective-C files using LLVM 10.